--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.7",
-    "node-sass-middleware": "^1.0.1"
+    "node-sass-middleware": "^1.0.1",
+    "nodemon": "^2.0.19"
   },
   "name": "issuetracker",
   "version": "1.0.0",
